--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,62 @@ env:
   TEST_REPO: jasonyang-ee/STM32-CMAKE-TEMPLATE
 
 jobs:
-  Build_Test_Ubuntu_Debian_Alpine:
+  Build_Test_AMD64_Ubuntu_Debian_Alpine:
+    runs-on: ubuntu-20.04
+    permissions:
+      contents: read
+      packages: write
+
+    strategy:
+      matrix:
+        aarch: [amd64]
+        files: [ubuntu, debian, alpine]
+
+    steps:
+    - name: free disk space from docker
+      run: |
+        docker rmi $(docker image ls -aq)
+        df -h
+
+    - name: Checkout project
+      uses: actions/checkout@v3
+
+    - name: Checkout example repo
+      uses: actions/checkout@v3
+      with:
+        repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
+        path: project
+
+    - name: Set QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build and Load Ubuntu Debian Alpine
+      id: build3x
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/${{ matrix.aarch }}
+        file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
+        load: true
+        tages: stm32-builder/${{ matrix.files }}-test
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
+    - name: Test All
+      run: |
+        docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+        docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-${{ matrix.aarch }}":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-${{ matrix.aarch }}
+        docker run --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-${{ matrix.aarch }}":"/home" ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+
+    - name: Cleanup Folders
+      run: |
+        rm -rf ${{ github.workspace }}/project-*
+        rm -rf ${{ github.workspace }}/hybrid-*
+
+  Build_Test_ARM64_Ubuntu_Debian_Alpine:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -25,10 +80,16 @@ jobs:
 
     strategy:
       matrix:
-        aarch: [amd64, arm64]
+        aarch: [arm64]
         files: [ubuntu, debian, alpine]
 
     steps:
+    - name: Build in arm64 container
+      uses: uraimo/run-on-arch-action@v2.1.1
+      with:
+        arch: aarch64
+        distro: ubuntu20.04
+
     - name: free disk space from docker
       run: |
         docker rmi $(docker image ls -aq)
