--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Build and Load Ubuntu Debian Alpine
-      id: build3x-arm64
+      id: build3x
       uses: docker/build-push-action@v4
       with:
         context: .
@@ -119,10 +119,10 @@ jobs:
       with:
         arch: aarch64
         distro: ubuntu20.04
-      run: |
-        docker run --rm ${{ steps.build3x-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x-arm64.outputs.imageid }} /proj-${{ matrix.files }}-arm64
-        docker run --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-arm64":"/home" ${{ steps.build3x-arm64.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+        run: |
+          docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
+          docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-arm64
+          docker run --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-arm64":"/home" ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
 
     - name: Cleanup Folders
       run: |
