--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,14 @@ jobs:
         docker rmi $(docker image ls -aq)
         df -h
 
+    - name: Delete dangling image package
+      uses: actions/delete-package-versions@v4
+      with: 
+        package-name: 'stm32-builder'
+        package-type: 'container'
+        min-versions-to-keep: 0
+        delete-only-untagged-versions: 'true'
+
     - name: Checkout project
       uses: actions/checkout@v3
 
@@ -40,7 +48,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
-        path: project
+        path: project-${{ matrix.files }}-amd64
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -54,6 +62,16 @@ jobs:
         registry: ${{ vars.REGISTRY }}
         username: ${{ secrets.USER_GITHUB_PERSONAL }}
         password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
+
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
+          ${{ vars.REGISTRY }}/stm32-builder
+        tags: type=raw,value=test
+        flavor: prefix=${{ matrix.files }}-,onlatest=false
 
     - name: Set QEMU
       uses: docker/setup-qemu-action@v2
@@ -69,7 +87,8 @@ jobs:
         platforms: linux/amd64
         file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
         push: true
-        tages: ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder/${{ matrix.files }}-test
+        tages: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
@@ -107,7 +126,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
-        path: project
+        path: project-${{ matrix.files }}-arm64
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -136,7 +155,8 @@ jobs:
         platforms: linux/arm64
         file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
         push: true
-        tages: ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder/${{ matrix.files }}-test
+        tages: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
@@ -173,7 +193,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
-        path: project
+        path: project-arch
 
     - name: Set QEMU
       uses: docker/setup-qemu-action@v2
