--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,29 +50,6 @@ jobs:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
         path: project-${{ matrix.files }}-amd64
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Log in to Github Container Registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        registry: ${{ vars.REGISTRY }}
-        username: ${{ secrets.USER_GITHUB_PERSONAL }}
-        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
-
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
-          ${{ vars.REGISTRY }}/stm32-builder
-        tags: type=raw,value=test
-        flavor: prefix=${{ matrix.files }}-,onlatest=false
-
     - name: Set QEMU
       uses: docker/setup-qemu-action@v2
 
@@ -86,8 +63,8 @@ jobs:
         context: .
         platforms: linux/amd64
         file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        load: true
+        tags: stm32-builder/${{ matrix.files }}-test
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
@@ -128,19 +105,6 @@ jobs:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
         path: project-${{ matrix.files }}-arm64
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Log in to Github Container Registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        registry: ${{ vars.REGISTRY }}
-        username: ${{ secrets.USER_GITHUB_PERSONAL }}
-        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
-
     - name: Set QEMU
       uses: docker/setup-qemu-action@v2
 
@@ -154,8 +118,8 @@ jobs:
         context: .
         platforms: linux/arm64
         file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        load: true
+        tags: stm32-builder/${{ matrix.files }}-test
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
