--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,19 @@ jobs:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
         path: project-${{ matrix.files }}-arm64
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Log in to Github Container Registry
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        registry: ${{ vars.REGISTRY }}
+        username: ${{ secrets.USER_GITHUB_PERSONAL }}
+        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
+
     - name: Set QEMU
       uses: docker/setup-qemu-action@v2
 
