--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,13 +125,13 @@ jobs:
       uses: pguyot/arm-runner-action@v2
       with:
         base_image: raspi_4_bullseye:20230102
+        image_additional_mb: 1024
         commands: |
+          # sudo apt-get update -y --allow-releaseinfo-change
+          # sudo apt-get install --no-install-recommends -y docker.io
           docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
           docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-arm64
           docker run --rm -v "${{ github.workspace }}/hybrid-${{ matrix.files }}-arm64":"/home" ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
-
-# sudo apt-get update
-# sudo apt-get install docker.io -y
 
     - name: Cleanup Folders
       run: |
