--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,17 +127,9 @@ jobs:
         base_image: raspios_lite_arm64:2022-04-04
         image_additional_mb: 1024
         commands: |
-          sudo apt-get update -y --allow-releaseinfo-change
-          sudo apt-get install --no-install-recommends -y ca-certificates curl gnupg
-          sudo install -m 0755 -d /etc/apt/keyrings
-          curl -fsSL https://download.docker.com/linux/raspbian/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-          sudo chmod a+r /etc/apt/keyrings/docker.gpg
-          echo \
-          "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/raspbian \
-          "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
-          sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get update -y --allow-releaseinfo-change
-          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo apt-get update -y
+          sudo apt-get install --no-install-recommends -y curl
+          sudo curl -sSL https://get.docker.com | sh
           sudo docker run hello-world
           sudo docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
           sudo docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-arm64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-arm64
