--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -84,6 +84,17 @@ jobs:
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
         labels: ${{ steps.meta-ubuntu.outputs.labels }}
 
+    - name: Build and Upload for Ubuntu
+      id: output-debian
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64/v8
+        file: ${{ github.workspace }}/Dockerfile.debian
+        push: true
+        tags: ${{ steps.meta-debian.outputs.tags }}
+        labels: ${{ steps.meta-debian.outputs.labels }}
+
     - name: Build and Upload for Alpine
       id: output-alpine
       uses: docker/build-push-action@v4
