--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,40 @@ jobs:
         sudo rm -r ${{ github.workspace }}/project-*
         sudo rm -r ${{ github.workspace }}/hybrid-*
 
+  Build_Test_ARM64_Ubuntu_Debian_Alpine:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: write
+
+    strategy:
+      matrix:
+        files: [ubuntu, debian, alpine]
+
+    steps:
+    - name: free disk space from docker
+      run: |
+        docker rmi $(docker image ls -aq)
+        df -h
+
+    - name: Checkout project
+      uses: actions/checkout@v3
+
+    - name: Set QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build Ubuntu Debian Alpine
+      id: build3x
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/arm64
+        file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
+        tags: stm32-builder/${{ matrix.files }}-test
+
   Build_Test_Arch:
     runs-on: ubuntu-22.04
     permissions:
