--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,12 +7,20 @@ on:
 
 jobs:
   Build_Upload:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       packages: write
 
     steps:
+    - name: Delete dangling image package
+      uses: actions/delete-package-versions@v4
+      with: 
+        package-name: 'stm32-builder'
+        package-type: 'container'
+        min-versions-to-keep: 0
+        delete-only-untagged-versions: 'true'
+
     - name: Checkout project
       uses: actions/checkout@v3
       
@@ -46,7 +54,6 @@ jobs:
         tags: type=ref,event=tag
         flavor: prefix=arch-,onlatest=true
 
-
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -76,6 +83,17 @@ jobs:
         push: true
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
         labels: ${{ steps.meta-ubuntu.outputs.labels }}
+
+    - name: Build and Upload for Ubuntu
+      id: output-debian
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64/v8
+        file: ${{ github.workspace }}/Dockerfile.debian
+        push: true
+        tags: ${{ steps.meta-debian.outputs.tags }}
+        labels: ${{ steps.meta-debian.outputs.labels }}
 
     - name: Build and Upload for Alpine
       id: output-alpine
