--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ env:
   TEST_REPO: jasonyang-ee/STM32-CMAKE-TEMPLATE
 
 jobs:
-  Build_Test_AMD64_Ubuntu_Debian_Alpine:
+  Build_Test_AMD64:
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -26,7 +26,7 @@ jobs:
 
     strategy:
       matrix:
-        files: [ubuntu, debian, alpine]
+        files: [ubuntu, debian, alpine, arch]
 
     steps:
     - name: free disk space from docker
@@ -49,7 +49,7 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and Load Ubuntu Debian Alpine
+    - name: Build and Load
       id: build3x
       uses: docker/build-push-action@v4
       with:
@@ -59,7 +59,7 @@ jobs:
         load: true
         tags: stm32-builder/${{ matrix.files }}-test
 
-    - name: Test AMD64
+    - name: Test
       run: |
         docker run --rm ${{ steps.build3x.outputs.imageid }} ${{ env.TEST_REPO_URL }}
         docker run --rm -v "${{ github.workspace }}/project-${{ matrix.files }}-amd64":"/proj" ${{ steps.build3x.outputs.imageid }} /proj-${{ matrix.files }}-amd64
@@ -70,7 +70,7 @@ jobs:
         sudo rm -r ${{ github.workspace }}/project-*
         sudo rm -r ${{ github.workspace }}/hybrid-*
 
-  Build_Test_ARM64_Ubuntu_Debian_Alpine:
+  Build_Test_ARM64:
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -95,7 +95,7 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Ubuntu Debian Alpine
+    - name: Build Only
       id: build3x
       uses: docker/build-push-action@v4
       with:
@@ -104,53 +104,11 @@ jobs:
         file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
         tags: stm32-builder/${{ matrix.files }}-test
 
-  Build_Test_Arch:
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - name: Checkout project
-      uses: actions/checkout@v3
-
-    - name: Checkout example repo
-      uses: actions/checkout@v3
-      with:
-        repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
-        path: project-arch
-
-    - name: Set QEMU
-      uses: docker/setup-qemu-action@v2
-
-    - name: Set Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Build and Load Arch
-      id: build-arch
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ${{ github.workspace }}/Dockerfile.arch
-        load: true
-        tags: stm32-builder/arch-test
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-
-    - name: Test Arch
-      run: |
-        docker run --rm ${{ steps.build-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        docker run --rm -v "${{ github.workspace }}/project-arch":"/proj" ${{ steps.build-arch.outputs.imageid }} /proj
-        docker run --rm -v "${{ github.workspace }}/hybrid-arch":"/home" ${{ steps.build-arch.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
-
-    - name: Cleanup Folders
-      run: |
-        sudo rm -r ${{ github.workspace }}/project-*
-        sudo rm -r ${{ github.workspace }}/hybrid-*
-
   Result:
     runs-on: ubuntu-22.04
-    needs: [Build_Test_Arch, Build_Test_AMD64_Ubuntu_Debian_Alpine, Build_Test_ARM64_Ubuntu_Debian_Alpine]
+    needs:
+      - Build_Test_AMD64
+      - Build_Test_ARM64
     if: always()
     steps:
       - name: All tests ok
