--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,10 @@ jobs:
       contents: read
       packages: write
 
+    strategy:
+      matrix:
+        files: [ubuntu, debian, alpine, arch]
+
     steps:
     - name: Delete dangling image package
       uses: actions/delete-package-versions@v4
@@ -25,44 +29,14 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Docker meta ubuntu
-      id: meta-ubuntu
+      id: meta
       uses: docker/metadata-action@v4
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
           ${{ vars.REGISTRY }}/stm32-builder
         tags: type=ref,event=tag
-        flavor: prefix=ubuntu-,onlatest=true
-
-    - name: Docker meta debian
-      id: meta-debian
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
-          ${{ vars.REGISTRY }}/stm32-builder
-        tags: type=ref,event=tag
-        flavor: prefix=debian-,onlatest=true
-
-    - name: Docker meta alpine
-      id: meta-alpine
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
-          ${{ vars.REGISTRY }}/stm32-builder
-        tags: type=ref,event=tag
-        flavor: prefix=alpine-,onlatest=true
-
-    - name: Docker meta arch
-      id: meta-arch
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/stm32-builder
-          ${{ vars.REGISTRY }}/stm32-builder
-        tags: type=ref,event=tag
-        flavor: prefix=arch-,onlatest=true
+        flavor: prefix=${{ matrix.files }}-,onlatest=true
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -83,46 +57,24 @@ jobs:
     - name: Set Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and Upload for Ubuntu
-      id: output-ubuntu
+    - if: matrix.files != 'arch'
+      name: Build and Upload
       uses: docker/build-push-action@v4
       with:
         context: .
         platforms: linux/amd64,linux/arm64/v8
-        file: ${{ github.workspace }}/Dockerfile.ubuntu
+        file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
         push: true
-        tags: ${{ steps.meta-ubuntu.outputs.tags }}
-        labels: ${{ steps.meta-ubuntu.outputs.labels }}
-
-    - name: Build and Upload for Debian
-      id: output-debian
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64/v8
-        file: ${{ github.workspace }}/Dockerfile.debian
-        push: true
-        tags: ${{ steps.meta-debian.outputs.tags }}
-        labels: ${{ steps.meta-debian.outputs.labels }}
-
-    - name: Build and Upload for Alpine
-      id: output-alpine
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64/v8
-        file: ${{ github.workspace }}/Dockerfile.alpine
-        push: true
-        tags: ${{ steps.meta-alpine.outputs.tags }}
-        labels: ${{ steps.meta-alpine.outputs.labels }}
-
-    - name: Build and Upload for Arch
-      id: output-arch
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+      
+    - if: matrix.files = 'arch'
+      name: Build and Upload
       uses: docker/build-push-action@v4
       with:
         context: .
         platforms: linux/amd64
-        file: ${{ github.workspace }}/Dockerfile.arch
+        file: ${{ github.workspace }}/Dockerfile.${{ matrix.files }}
         push: true
-        tags: ${{ steps.meta-arch.outputs.tags }}
-        labels: ${{ steps.meta-arch.outputs.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
